...
        {/*<RoundedButton text="Customer" onPress={customerEntityScreen} testID="customerEntityScreenButton" />*/}
        {/*<RoundedButton text="TypeOfBusiness" onPress={typeOfBusinessEntityScreen} testID="typeOfBusinessEntityScreenButton" />*/}
        <RoundedButton text="Product" onPress={productEntityScreen} testID="productEntityScreenButton" />
        {/*<RoundedButton text="Category" onPress={categoryEntityScreen} testID="categoryEntityScreenButton" />*/}
        {/*<RoundedButton text="ListOfPrice" onPress={listOfPriceEntityScreen} testID="listOfPriceEntityScreenButton" />*/}
        {/*<RoundedButton text="OrderHeader" onPress={orderHeaderEntityScreen} testID="orderHeaderEntityScreenButton" />*/}
        {/*<RoundedButton text="OrderDetailPo" onPress={orderDetailPoEntityScreen} testID="orderDetailPoEntityScreenButton" />*/}
        {/*<RoundedButton text="Notification" onPress={notificationEntityScreen} testID="notificationEntityScreenButton" />*/}
        {/*<RoundedButton text="CheckNotification" onPress={checkNotificationEntityScreen} testID="checkNotificationEntityScreenButton" />*/}
        {/* ignite-jhipster-entity-screen-needle */}
      </ScrollView>
    )
  }
}
...
